# tracktable

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci-code_analysis.yml  .gitlab-ci-coverage.yml  .gitlab-ci-linux.yml  .gitlab-ci-macos.yml  .gitlab-ci-static_analysis.yml  .gitlab-ci-ubuntu2004.yml  .gitlab-ci-windows.yml  .gitlab-ci.yml  .gitmodules  .pypirc  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  GETTING_STARTED.md  LICENSE.html  LICENSE.txt  MANIFEST.in  README.md  README_dev_environment.md  RELEASE_NOTES.md  RELEASE_NOTES.txt  STABLE_BRANCH_IS_NAMED_MAIN.md  TESTING.md  disclaimer.txt  documentation_build_environment.yml  environment.yml  mypy.ini  pyproject.toml  setup-osx.py  setup-win.py  setup.cfg  tracktable.pc.in  tracktable_dev_environment.yml  tracktable_environment.yml  version.txt
packaging/: MANIFEST.in  pyproject.toml  setup-generic.py  setup-osx.py  setup.cfg  winlocate.py  winlocate_new.py
packaging/conda/: README.md  meta.yaml  unix_conda_builder_environment.yml  win_conda_builder_environment.yml
packaging/conda-forge/feedstock/: README.md  meta.yaml
packaging/osx/: build_osx_wheels.sh
packaging/pypi/linux/: .gitignore  README.md  build_all.sh  clean_all.sh  clean_tracktable.sh  defaults.sh
packaging/pypi/macos/: build_macos_wheels.sh
packaging/pypi/osx/: build_osx_wheels.sh  getopt_test.sh
packaging/rpm/rhel7/: tracktable.spec.in
tracktable/Analysis/: AssembleTrajectories.h  CMakeLists.txt  ComputeDBSCANClustering.h  DBSCAN.h  DistanceGeometry.h  GreatCircleFit.cpp  GreatCircleFit.h  GuardedBoostGeometryRTreeHeader.h  RTree.h
tracktable/Analysis/Tests/: CMakeLists.txt  test_cartesian2d_distance_geometry_by_distance.cpp  test_cartesian2d_distance_geometry_by_time.cpp  test_dbscan_cartesian.cpp  test_dbscan_cs_change.cpp  test_dbscan_decorated_points.cpp  test_dg.cpp  test_distance_geometry.cpp  test_great_circle_fit.cpp  test_rtree.cpp  test_terrestrial_distance_geometry_by_distance.cpp  test_terrestrial_distance_geometry_by_time.cpp  test_trajectory_assembly_with_domain.cpp
tracktable/Analysis/detail/: AssembleTrajectoriesIterator.h  PairMember.h  coordinate_transfer_converter.h  dbscan_drivers.h  dbscan_implementation.h  dbscan_points.h  extract_pair_member.h  point_converter.h  transfer_point_coordinates.h
tracktable/CommandLineFactories/Tests/: AssemblerFromCommandLine_TEST.cpp  CMakeLists.txt  CombinedCommandLine_TEST.cpp  FactoryTestMain.cpp  PointReaderFromCommandLine_TEST.cpp
tracktable/Core/: Box.h  CMakeLists.txt  Conversions.h  FloatingPointComparison.h  GeometricMean.h  GeometricMedian.h  Geometry.h  GuardedBoostGeometryHeaders.h  Logging.cpp  Logging.h  MemoryUse.cpp  MemoryUse.h  PlatformDetect.h  PointArithmetic.h  PointBase.h  PointCartesian.h  PointLonLat.cpp  PointLonLat.h  PointTraits.h  PropertyConverter.cpp  PropertyConverter.h  PropertyMap.cpp  PropertyMap.h  PropertyValue.cpp  PropertyValue.h  Timestamp.cpp  Timestamp.h  TimestampConverter.cpp  TimestampConverter.h  TracktableCommon.h  Trajectory.h  TrajectoryPoint.h  UUID.cpp  UUID.h  UnfortunateWorkarounds.h
tracktable/Core/Tests/: CMakeLists.txt  test_base_point_serialization.cpp  test_convex_hull_area.cpp  test_convex_hull_aspect_ratio.cpp  test_convex_hull_perimeter.cpp  test_current_length.cpp  test_current_length_fraction.cpp  test_current_time_fraction.cpp  test_degenerate_convex_hull.cpp  test_distance.cpp  test_geometric_median.cpp  test_geometry.cpp  test_log_level.cpp  test_memory_use.cpp  test_point_arithmetic.cpp  test_point_at_fraction.cpp  test_point_cartesian.cpp  test_point_geometric_median.cpp  test_point_geometry_math.cpp  test_point_interpolation.cpp  test_point_lonlat.cpp  test_point_lonlat_ECEF.cpp  test_point_serialization.cpp  test_point_types.cpp  test_property_map.cpp  test_serialize_variant.cpp  test_simplify_linestring.cpp  test_timestamp_format.cpp  test_trajectory_id.cpp  test_trajectory_lonlat.cpp  test_trajectory_point.cpp  test_trajectory_point_lonlat.cpp  test_trajectory_point_serialization.cpp  test_trajectory_radius_of_gyration.cpp  test_trajectory_serialization.cpp  test_trajectory_slicing.cpp  test_trajectory_subset.cpp  test_trajectory_uuid.cpp
tracktable/Core/WarningGuards/: CommonBoostWarnings.h  DeprecatedDeclaration.h  PopWarningState.h  PragmaMessages.h  PushWarningState.h  ShadowedDeclaration.h  SizeTConversion.h  UnusedTypedef.h
tracktable/DataGenerators/: CMakeLists.txt  PointGenerator.h
tracktable/DataGenerators/Tests/: CMakeLists.txt  PointGenerator_TEST.cpp
tracktable/Domain/: CMakeLists.txt  Cartesian2D.h  Cartesian3D.h  DomainMacros.h  FeatureVectors.h  PrintFunctions.cpp  Terrestrial.h
tracktable/Domain/Tests/: CMakeLists.txt  test_base_point_terrestrial.cpp  test_domain_terrestrial.cpp  (+4 more)
tracktable/Examples/: CMakeLists.txt
tracktable/IO/: CMakeLists.txt  GenericReader.h  KmlOut.cpp  KmlOut.h  LineReader.h  ParseExceptions.h  PointFromTokensReader.h  PointReader.h  PointWriter.h  SkipCommentsReader.h  StringTokenizingReader.h  TokenWriter.h  TrajectoryReader.h  TrajectoryWriter.h
tracktable/PythonWrapping/: BasePointToString.h  BoostLibs.cpp  BoostPythonHeaders.h  CMakeLists.txt  CPythonModule.c  Cartesian2DDomainModule.cpp  Cartesian3DDomainModule.cpp  CommonMapWrappers.cpp  CommonMapWrappers.h  CorePythonModule.cpp  DBSCANClusteringPythonModule.cpp  DateTimePythonModule.cpp  DateTimeWrapper.cpp  DateTimeWrapper.h  DistanceGeometryModule.cpp  DomainAlgorithmOverloadsPythonModule.cpp  DomainWrapperTemplates.h  FeatureVectorModule.cpp  FloatVectorWrapper.cpp  FloatVectorWrapper.h  GenericSerializablePickleSuite.h  GuardedBoostPythonHeaders.h  GuardedBoostStreamHeaders.h  HelloWorldPythonModule.cpp  LoggingModule.cpp  PairToTupleWrapper.cpp  PairToTupleWrapper.h  PicklePropertyMap.h  PickleSuites.h  PickleTrajectories.h  PickleTrajectoryPoints.h  PointPythonModule.cpp  PropertyMapWrapper.cpp  PropertyMapWrapper.h  PythonAwarePointReader.h  PythonAwareTrajectoryReader.h  PythonFileLikeObjectStreams.h  PythonTypedObjectWriter.h  PythonWrappingParameters.h.in  RTreePythonModule.cpp  (+10 more)
(+1825 files in other folders)
